뭐가 바뀐 건지 모름

--- a/1. Basic of R.ipynb
+++ b/1. Basic of R.ipynb
@@ -14,6 +14,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:22:43.855739Z",
      "start_time": "2019-07-03T04:22:43.516Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:49:59.071371Z",
+     "iopub.status.busy": "2020-06-04T16:49:59.067367Z",
+     "iopub.status.idle": "2020-06-04T16:49:59.158370Z"
     }
    },
    "outputs": [
@@ -60,6 +65,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:22:45.499012Z",
      "start_time": "2019-07-03T04:22:45.298Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:50:04.365130Z",
+     "iopub.status.busy": "2020-06-04T16:50:04.296114Z",
+     "iopub.status.idle": "2020-06-04T16:50:04.404125Z"
     }
    },
    "outputs": [
@@ -102,6 +112,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:22:46.474885Z",
      "start_time": "2019-07-03T04:22:46.882Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:50:05.746634Z",
+     "iopub.status.busy": "2020-06-04T16:50:05.745634Z",
+     "iopub.status.idle": "2020-06-04T16:50:05.777645Z"
     }
    },
    "outputs": [
@@ -143,6 +158,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:22:49.760467Z",
      "start_time": "2019-07-03T04:22:50.162Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:50:07.196173Z",
+     "iopub.status.busy": "2020-06-04T16:50:07.194173Z",
+     "iopub.status.idle": "2020-06-04T16:50:07.225173Z"
     }
    },
    "outputs": [
@@ -185,6 +205,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:23:13.554082Z",
      "start_time": "2019-07-03T04:23:13.388Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:50:09.871776Z",
+     "iopub.status.busy": "2020-06-04T16:50:09.869774Z",
+     "iopub.status.idle": "2020-06-04T16:50:09.910774Z"
     }
    },
    "outputs": [
@@ -237,6 +262,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:23:16.566973Z",
      "start_time": "2019-07-03T04:23:16.94Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:50:19.979308Z",
+     "iopub.status.busy": "2020-06-04T16:50:19.978312Z",
+     "iopub.status.idle": "2020-06-04T16:50:20.005310Z"
     }
    },
    "outputs": [],
@@ -247,11 +277,6 @@
     "remove(not_used_data1)  # 필요없는 데이터 집합 삭제\n",
     "rm(not_used_data2)  # 필요없는 데이터 집합 삭제"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -268,6 +293,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:23:20.289778Z",
      "start_time": "2019-07-03T04:23:20.683Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:50:38.907099Z",
+     "iopub.status.busy": "2020-06-04T16:50:38.905099Z",
+     "iopub.status.idle": "2020-06-04T16:50:38.926118Z"
     }
    },
    "outputs": [],
@@ -282,6 +312,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:23:22.238162Z",
      "start_time": "2019-07-03T04:23:22.203Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:50:40.608186Z",
+     "iopub.status.busy": "2020-06-04T16:50:40.607205Z",
+     "iopub.status.idle": "2020-06-04T16:50:40.635190Z"
     }
    },
    "outputs": [
@@ -329,6 +364,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:23:23.481507Z",
      "start_time": "2019-07-03T04:23:23.882Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:50:58.260623Z",
+     "iopub.status.busy": "2020-06-04T16:50:58.259644Z",
+     "iopub.status.idle": "2020-06-04T16:50:58.285623Z"
     }
    },
    "outputs": [
@@ -376,6 +416,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:23:28.219352Z",
      "start_time": "2019-07-03T04:23:28.619Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:51:01.451841Z",
+     "iopub.status.busy": "2020-06-04T16:51:01.449841Z",
+     "iopub.status.idle": "2020-06-04T16:51:01.471821Z"
     }
    },
    "outputs": [
@@ -400,6 +445,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:23:29.599989Z",
      "start_time": "2019-07-03T04:23:29.995Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:51:02.543610Z",
+     "iopub.status.busy": "2020-06-04T16:51:02.542594Z",
+     "iopub.status.idle": "2020-06-04T16:51:02.565591Z"
     }
    },
    "outputs": [
@@ -424,6 +474,11 @@
     "ExecuteTime": {
      "end_time": "2019-07-03T04:40:40.315326Z",
      "start_time": "2019-07-03T04:40:40.706Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2020-06-04T16:51:06.037903Z",
+     "iopub.status.busy": "2020-06-04T16:51:06.036899Z",
+     "iopub.status.idle": "2020-06-04T16:51:06.064918Z"
     }
    },
    "outputs": [
